# Quantum_Machine_Learning

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  RESULTS.md  THEORY.md  USAGE.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  tests.yml
docs/pages/: README.md  build_site.py  generate_results.py  styles.css
docs/pages/assets/reference-results/autoencoder/data/: correlated_layers1_latent2_steps6_samples32_noise0p05_seed123.json
docs/pages/assets/reference-results/metric_learning/data/: moons_layers1_steps8_samples50_margin0p5_seed42.json
docs/pages/assets/reference-results/qcnn/data/: moons_steps6_samples40_noise0p1_seed123_analytic.json
docs/pages/assets/reference-results/quantum_kernel/data/: moons_samples36_noise0p1_seed123_analytic.json
docs/pages/assets/reference-results/trainable_kernel/data/: moons_trainable_kernel_embdata_reupload_layers1_steps2_samples20_noise0p1_seed123_analytic_analytic.json
docs/qml/: autoencoder.md  benchmarks.md  classical_baselines.md  metric_learning.md  qcnn.md  quantum_kernels.md  variational_quantum_classifier.md  variational_regression.md
notebooks/: classical_vs_quantum_classifier.ipynb  classical_vs_quantum_regression.ipynb  quantum_approx_optimization.ipynb  quantum_autoencoder.ipynb  quantum_convolutional_neural_network.ipynb  quantum_kernel_classifier.ipynb  quantum_kernel_classifier.py  quantum_metric_learning.ipynb  quantum_regressor.ipynb  quantum_variational_classifier.ipynb  quantum_variational_classifier.py
notebooks/archive/: quantum_approx_optimization.ipynb
qml/: __init__.py  __main__.py  ansatz.py  autoencoder.py  benchmarks.py  classical_baselines.py  classifiers.py  data.py  datasets.py  embeddings.py  io_utils.py  kernel_methods.py  losses.py  metric_learning.py  metrics.py  optimizers.py  qcnn.py  regression.py  trainable_kernels.py  training.py  utils.py  visualize.py
qml_pennylane.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_autoencoder_smoke.py  test_benchmarks_smoke.py  test_classical_baselines_smoke.py  test_cli_smoke.py  test_dataset_smoke.py  test_embeddings_smoke.py  test_imports.py  test_kernel_smoke.py  test_metric_learning_artifacts.py  test_metric_learning_smoke.py  test_noise_smoke.py  test_qcnn_smoke.py  test_regression_artifacts.py  test_regression_smoke.py  test_trainable_kernel_smoke.py  test_training_loop_smoke.py  test_vqc_artifacts.py  test_vqc_smoke.py
(+2 files in other folders)
