[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "qml-pennylane"
version = "0.1.0"
description = "Modular PennyLane-based quantum machine learning suite for classification, regression, and quantum kernel methods."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Sid Richards" }
]

license = { text = "MIT" }

dependencies = [
    "pennylane>=0.34",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7"
]


[project.optional-dependencies]

dev = [
    "pytest>=7",
    "black",
    "ruff",
    "ipykernel"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["qml*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


[tool.ruff]
line-length = 100
exclude = [
    "notebooks/archive",
]

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = "notebooks/archive"